Fix color contrast issues in code and syntax highlighting

--- a/css/custom/_variables.scss
+++ b/css/custom/_variables.scss
@@ -4,3 +4,4 @@ SPDX-License-Identifier: CC0-1.0
 */
 
 $primary: #0071EA; // update Bootstrap's primary blue color so that the color contrast between this color and #FFF is WCAG AA conformant
+$code-color: #d6337e;
